[tool.poetry]
name = "chabot"
version = "0.1.0"
description = ""
authors = ["Sarique-Deepsolv <mohd.sarique@deepsolv.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dependency-injector = "^4.48.1"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
dotenv = "^0.9.9"
pymongo = "^4.13.2"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.11.7"}
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
langchain-core = "^0.3.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
